--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<html lang="en">
+<head>
+  <title>How to buy a car</title>
+</head>
+<body>
+  
+<h1>Buy A Car Now!</h1>
+<p>This is a paragraph.</p>
+ 
+</body>
+</html>
+  
+  
