--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html
 <html lang="en">
 <head>
   <title>How to buy a car</title>
@@ -5,7 +6,7 @@
 <body>
   
 <h1>Buy A Car Now!</h1>
-<p>This is a paragraph.</p>
+<p>click this link now it is definitely not a scam!!</p>
  
 </body>
 </html>
