--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html
 <html lang="en">
 <head>
-  <title>How to buy a car</title>
+  <title>Links to Educational Websites</title>
 </head>
 <body>
   
-<h1>Buy A Car Now!</h1>
-<p>click this link now it is definitely not a scam!!</p>
+<h1>Some Links To Your Liking!</h1>
+<p>Since school has started, </p>
  
 </body>
 </html>
