--- a/index.html
+++ b/index.html
@@ -7,9 +7,39 @@
   
 <h1>Some Links To Your Liking!</h1>
 <p>Since school has started, people may be struggling to keep up with all their work. I made this website to help people for their up coming test!</p>
- 
+<hr> 
 </body>
 </html>
   
 <body style="background-color:powderblue;"> 
 
+<html>
+<head>
+<style>
+.button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {background-color: #4CAF50;} /* Green */
+.button2 {background-color: #008CBA;} /* Blue */
+</style>
+</head>
+<body>
+
+<h4>nggh</h4>
+<p>Change the background color of a button with the background-color property:</p>
+
+<button class="button button1">Green</button>
+<button class="button button2">Blue</button>
+
+</body>
+</html>
+<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
