--- a/index.html
+++ b/index.html
@@ -42,4 +42,7 @@
 
 </body>
 </html>
-<p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+<h1>HTML Links</h1>
+
+<p><a href="https://www.khanacademy.org/math">Visit Khan Academy!</a></p>
+
