--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   cursor: pointer;
 }
 
-.button1 {background-color: #4CAF50;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
+.button1 {background-color: #4CAF50;} /* The Organic Tutor */
+.button2 {background-color: #008CBA;} /* Khan Academy */
 </style>
 </head>
 <body>
