--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 </head>
 <body>
 
-<h4>nggh</h4>
-<p>Change the background color of a button with the background-color property:</p>
+<h4>Suggestions are below!</h4>
 
-<button class="button button1">Green</button>
-<button class="button button2">Blue</button>
+<input type="button" class="button button1" onclick="window.location.href='https://www.youtube.com/c/TheOrganicChemistryTutor';">The Organic Tutor</button>
+<button class="button button2">Khan Academy</button>
 
 </body>
 </html>
