--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h4>Suggestions are below!</h4>
 
 <input type="button" class="button button1" onclick="window.location.href='https://www.youtube.com/c/TheOrganicChemistryTutor';">The Organic Tutor</button>
-<button class="button button2">Khan Academy</button>
+<input type="button" class="button button2" onclick="window.location.href='https://www.youtube.com/c/khanacademy';">Khan Academy</button>
 
 </body>
 </html>
