--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
 </html>
   
-<body style="background-color:powderblue;"> 
+<body style="background-color:white;"> 
 
 <html>
 <head>
@@ -41,7 +41,7 @@
 
 </body>
 </html>
-<h1>HTML Links</h1>
+<h1>Websites!</h1>
 
 <p><a href="https://www.khanacademy.org/math">Visit Khan Academy!</a></p>
 
