--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <h4>Suggestions are below!</h4>
 
-<input type="button" class="button button1" onclick="window.location.href='https://www.youtube.com/c/TheOrganicChemistryTutor';">The Organic Tutor</button>
-<input type="button" class="button button2" onclick="window.location.href='https://www.youtube.com/c/khanacademy';">Khan Academy</button>
+<input type="button" class="button button1" onclick="window.location.href='https://www.youtube.com/c/TheOrganicChemistryTutor';" value="The Organic Tutor"/>
+<input type="button" class="button button2" onclick="window.location.href='https://www.youtube.com/c/khanacademy';" value="Khan Academy"/>
 
 </body>
 </html>
