--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 </head>
 <body>
 
-<h4>Suggestions are below!</h4>
+<h2>Youtube Channels!</h2>
 
 <input type="button" class="button button1" onclick="window.location.href='https://www.youtube.com/c/TheOrganicChemistryTutor';" value="The Organic Tutor"/>
 <input type="button" class="button button2" onclick="window.location.href='https://www.youtube.com/c/khanacademy';" value="Khan Academy"/>
 
 </body>
 </html>
-<h1>Websites!</h1>
+<h2>Websites!</h2>
 
 <p><a href="https://www.khanacademy.org/math">Visit Khan Academy!</a></p>
 
