--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 </body>
 </html>
 <h2>Websites!</h2>
-
+<img src="pic_trulli.jpg" alt="Italian Trulli">
 <p><a href="https://www.khanacademy.org/math">Visit Khan Academy!</a></p>
 
