--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   
 <h1>Some Links To Your Liking!</h1>
-<p>Since school has started, people may be struggling to keep up with all their work. I made this website to help people for their up coming test!</p>
+<p>Since school has started over a month ago, people may be struggling to keep up with all their work. I made this website to help people for their up coming test!</p>
 <hr> 
 </body>
 </html>
