--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Links to Educational Websites</title>
 </head>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 13px;
+  background-color: #d2A1d1;
+}
+</style>
+</head>
 <body>
-<img src="3144445-200.png" alt="Tutoring">
+
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+<body>
 <html>
 <h1>Some Links To Your Liking!</h1>
 <p>Since school has started over a month ago, people may be struggling to keep up with all their work. I made this website to help people for their up coming test!</p>
@@ -44,4 +72,3 @@
 <h2>Websites!</h2>
 <p><a href="https://www.khanacademy.org/math">Visit Khan Academy!</a></p>
 <p><a href="https://www.quizlet.com/latest">Visit Quizlet!</a></p>
-
