--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@ li a {
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="https://www.youtube.com/c/TheOrganicChemistryTutor">YouTube Channels</a></li>
+  <li><a href="https://www.youtube.com/c/khanacademy">Websites</a></li>
+ 
 </ul>
 <body>
 <html>
