--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ li a {
 <body>
 
 <ul>
-  <li><a href="https://www.youtube.com/c/TheOrganicChemistryTutor">YouTube Channels</a></li>
-  <li><a href="https://www.youtube.com/c/khanacademy">Websites</a></li>
+  <li><a href="mission.html">Mission Page</a></li>
+  <li><a href="contact.html">Contact</a></li>
  
 </ul>
 <body>
