--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,9 @@
 <html>
-  <h1> This is the contact page</h1>
-  </html
+  <h1>Some places you can contact me on!</h1>
+  
+  <h2>Email</h2>
+  <p> mahamed.4@themetroschool.org</p>
+  <h2> Phone Number</h2>
+  <p> 614-259-6639</p>
+<html>
+ 
