--- a/contact.html
+++ b/contact.html
@@ -5,5 +5,11 @@
   <p> mahamed.4@themetroschool.org</p>
   <h2> Phone Number</h2>
   <p> 614-259-6639</p>
-<html>
+</html>
  
+ 
+<html>
+<body style="background-color:lavender;">
+
+</body>
+</html>
