--- a/mission.html
+++ b/mission.html
@@ -1,4 +1,12 @@
-
 <html>
-  <h1> this is the mission page</h1>
+  <h1>Mission</h1>
+  
+  <p> My mission for creating this website was to help people in need. I know that it's hard to keep up with school work and balance your home life at the same time. <br> Me and many of my friends have all been through this situation and making this website could put all of us at ease.</p>
+</html>
+ 
+ 
+<html>
+<body style="background-color:lavender;">
+
+</body>
 </html>
