--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <html>
-  <h1>Some places you can contact me on!</h1>
+  <h1>Contact Types</h1>
   
   <h2>Email</h2>
   <p> mahamed.4@themetroschool.org</p>
