--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,10 @@
 <html>
+  <ul>
+  <li><a href="mission.html">Mission Page</a></li>
+  <li><a href="index.html">Home</a></li>
+</ul>
   <h1>Contact Types</h1>
+  
   
   <h2>Email</h2>
   <p> mahamed.4@themetroschool.org</p>
