--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,17 @@
 <html>
+  li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 13px;
+  background-color: #d2A1d1;
+}
+</style>
+</head>
+<body>
+  
   <ul>
   <li><a href="mission.html">Mission Page</a></li>
   <li><a href="index.html">Home</a></li>
