--- a/mission.html
+++ b/mission.html
@@ -1,4 +1,16 @@
 <html>
+  li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 13px;
+  background-color: #d2A1d1;
+}
+</style>
+</head>
+<body>
   <ul>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="index.html">Home</a></li>
