--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,12 @@
-<html>
-  li {
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
   float: left;
 }
 
@@ -9,10 +16,7 @@ li a {
   background-color: #d2A1d1;
 }
 </style>
-</head>
-<body>
-  
-  <ul>
+<ul>
   <li><a href="mission.html">Mission Page</a></li>
   <li><a href="index.html">Home</a></li>
 </ul>
