--- a/mission.html
+++ b/mission.html
@@ -1,5 +1,13 @@
 <html>
-  li {
+  <style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
   float: left;
 }
 
@@ -9,10 +17,8 @@ li a {
   background-color: #d2A1d1;
 }
 </style>
-</head>
-<body>
-  <ul>
-  <li><a href="contact.html">Contact</a></li>
+<ul>
+  <li><a href="mission.html">Mission Page</a></li>
   <li><a href="index.html">Home</a></li>
 </ul>
   <h1>Mission</h1>
