--- a/mission.html
+++ b/mission.html
@@ -18,7 +18,7 @@ li a {
 }
 </style>
 <ul>
-  <li><a href="mission.html">Mission Page</a></li>
+  <li><a href="contact.html">Contact</a></li>
   <li><a href="index.html">Home</a></li>
 </ul>
   <h1>Mission</h1>
